--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
   "author": "Jyoti Shah",
   "license": "ISC",
   "dependencies": {
-    "@types/cucumber": "^4.0.4",
+    "@types/cucumber": "^6.0.0",
     "@types/node": "10.12.18",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "cucumber": "^5.1.0",
-    "cucumber-html-reporter": "^4.0.4",
+    "cucumber": "^6.0.5",
+    "cucumber-html-reporter": "^5.0.2",
     "log4js": "^4.1.0",
     "log4js-protractor-appender": "^1.1.2",
     "protractor": "^5.4.2",
-    "protractor-cucumber-framework": "^6.1.1",
-    "ts-node": "7.0.1",
-    "typescript": "~3.2.2"
+    "protractor-cucumber-framework": "^6.2.0",
+    "ts-node": "^8.5.4",
+    "typescript": "~3.7.3"
   },
-  "devDependencies": {
-    "protractor-cucumber-steps": "^1.3.2"
-  }
+  "devDependencies": {}
 }
