--- a/package.json
+++ b/package.json
@@ -5,26 +5,25 @@
   "repository": "https://github.com/JyotiShah/ProtractorCucumberPOM.git",
   "main": "index.js",
   "scripts": {
-    "test": "protractor JavaScriptFiles/conf.js",
     "pretest": "tsc",
     "webdriver-update": "./node_modules/.bin/webdriver-manager update",
-    "protractor": "./node_modules/protractor/built/cli.js"
-  },
+    "protractor": "./node_modules/protractor/built/cli.js",
+    "test": "protractor JavaScriptFiles/conf.js"
+    },
   "author": "Jyoti Shah",
   "license": "ISC",
   "dependencies": {
+    "protractor": "^5.4.2",
+    "typescript": "3.6.4",
+    "ts-node": "^8.5.4",
+    "@types/node": "^8.10.59",
+    "cucumber": "^6.0.5",
     "@types/cucumber": "^6.0.0",
-    "@types/node": "10.12.18",
+    "cucumber-html-reporter": "^5.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "cucumber": "^6.0.5",
-    "cucumber-html-reporter": "^5.0.2",
     "log4js": "^4.1.0",
     "log4js-protractor-appender": "^1.1.2",
-    "protractor": "^5.4.2",
-    "protractor-cucumber-framework": "^6.2.0",
-    "ts-node": "^8.5.4",
-    "typescript": "~3.7.3"
-  },
-  "devDependencies": {}
+    "protractor-cucumber-framework": "^6.2.0"
+  }
 }
