--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   "author": "Jyoti Shah",
   "license": "ISC",
   "dependencies": {
-    "protractor": "^5.4.2",
-    "typescript": "3.6.4",
-    "ts-node": "^8.5.4",
-    "@types/node": "^8.10.59",
-    "cucumber": "^6.0.5",
     "@types/cucumber": "^6.0.0",
-    "cucumber-html-reporter": "^5.0.2",
+    "@types/node": "^8.10.59",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cucumber": "^6.0.5",
+    "cucumber-html-reporter": "^5.0.2",
     "log4js": "^4.1.0",
     "log4js-protractor-appender": "^1.1.2",
-    "protractor-cucumber-framework": "^6.2.0"
+    "protractor": "^7.0.0",
+    "protractor-cucumber-framework": "^6.2.0",
+    "selenium": "^2.20.0",
+    "ts-node": "^8.5.4",
+    "typescript": "3.6.4"
   }
 }
